frontEnd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
  labels:
    app: front-end
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: front-end
